--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=	2d3e9536f02f3b3ab26748edebc261fc"></script>
   </body>
 </html>
 
